akka sample demo

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>akka-http</module>
         <module>akka-streams</module>
+        <module>akka-sample</module>
     </modules>
 
     <dependencies>
